<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_newspaper_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/baseline_credit_card_24"
            android:title="@string/menu_card" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/baseline_table_chart_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_otp"
            android:icon="@drawable/baseline_password_24"
            android:title="@string/menu_otp" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/baseline_wifi_24"
            android:title="@string/menu_network" />
    </group>
</menu>