<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hlwdy.bjut.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.hlwdy.bjut.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_card"
        android:name="com.hlwdy.bjut.ui.card.CardFragment"
        android:label="@string/menu_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.hlwdy.bjut.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.hlwdy.bjut.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_otp"
        android:name="com.hlwdy.bjut.ui.otp.OtpFragment"
        android:label="@string/menu_otp"
        tools:layout="@layout/fragment_otp" />

    <fragment
        android:id="@+id/nav_network"
        android:name="com.hlwdy.bjut.ui.network.NetworkFragment"
        android:label="@string/menu_network"
        tools:layout="@layout/fragment_otp" />

</navigation>