<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut1"
        android:enabled="true"
        android:icon="@drawable/baseline_qr_code_24"
        android:shortcutShortLabel="@string/shortcut_cardcode">
        <intent
            android:action="openCardCode"
            android:targetClass="com.hlwdy.bjut.RouterActivity"
            android:targetPackage="com.hlwdy.bjut" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut4"
        android:enabled="true"
        android:icon="@drawable/baseline_wifi_password_24"
        android:shortcutShortLabel="@string/shortcut_network">
        <intent
            android:action="openNetwork"
            android:targetClass="com.hlwdy.bjut.RouterActivity"
            android:targetPackage="com.hlwdy.bjut" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut2"
        android:enabled="true"
        android:icon="@drawable/baseline_table_chart_24"
        android:shortcutShortLabel="@string/shortcut_schedule">
        <intent
            android:action="openSchedule"
            android:targetClass="com.hlwdy.bjut.RouterActivity"
            android:targetPackage="com.hlwdy.bjut" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut3"
        android:enabled="true"
        android:icon="@drawable/baseline_password_24"
        android:shortcutShortLabel="@string/shortcut_otp">
        <intent
            android:action="openOTP"
            android:targetClass="com.hlwdy.bjut.RouterActivity"
            android:targetPackage="com.hlwdy.bjut" />
    </shortcut>

</shortcuts>